fix: Fix sidebar project list visibility
    -Increase padding bottom of side bar to reveal full projects list

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -688,6 +688,10 @@ video {
   padding: 1rem;
 }
 
+.p-16 {
+  padding: 4rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -713,6 +717,11 @@ video {
   padding-bottom: 2rem;
 }
 
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
 .pl-4 {
   padding-left: 1rem;
 }
@@ -723,6 +732,10 @@ video {
 
 .pt-16 {
   padding-top: 4rem;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
 }
 
 .text-center {
